--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,10 @@ inputs:
     description: 'Add more output to the console for debugging'
     required: false
     default: "false"
+  file-name:
+    description: 'Use a different file name other than .headerrc.yml'
+    required: false
+    default: ".headerrc.yml"
 
 outputs:
   none: # id of output
@@ -29,4 +33,6 @@ runs:
     - ${{ inputs.dry-run }}
     - --verbose
     - ${{ inputs.verbose }}
+    - --file-name
+    - ${{ inputs.file-name }}
 
