Update tests and README

--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         dry-run: true
         verbose: true
+        file-name: .headerrc.yml
       env:
         FORCE_COLOR: "1" # Optional: Shows color output in GitHub console.
 
