--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
 				"njpwerner.autodocstring",
 				"pkief.material-icon-theme",
 				"redhat.vscode-yaml",
-				"tamasfe.even-better-toml"
+				"tamasfe.even-better-toml",
+				"ms-vscode.live-server"
 			],
 			"settings": {
 				// "http.proxyStrictSSL": false, // Fixes extensions not installing if you use a proxy
